Z-index fix for firefox on macOS

--- a/src/components/scss/_partials/landing.scss
+++ b/src/components/scss/_partials/landing.scss
@@ -129,6 +129,7 @@
 	width: 100%;
 	max-width: 17rem;
 	height: auto;
+	z-index:4;
 }
 .portrait{
 	max-width: 11rem;
